tests/integration/compile-fail/invalid_serializer.stderr
error: unexpected end of input
 --> $DIR/invalid_serializer.rs:3:1
  |
3 | declare_format_string!(); // unexpected end of input
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `declare_format_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token: "[year] [month]"
 --> $DIR/invalid_serializer.rs:4:35
  |
4 | declare_format_string!(my_format, "[year] [month]"); // missing formattable
  |                                   ^^^^^^^^^^^^^^^^

error: unexpected token: "[year] [month]"
 --> $DIR/invalid_serializer.rs:5:40
  |
5 | declare_format_string!(OffsetDateTime, "[year] [month]"); // missing ident
  |                                        ^^^^^^^^^^^^^^^^

error: unexpected end of input
 --> $DIR/invalid_serializer.rs:6:1
  |
6 | declare_format_string!(my_format, OffsetDateTime); // missing string format
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `declare_format_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token: "[year] [month]"
 --> $DIR/invalid_serializer.rs:7:50
  |
7 | declare_format_string!(my_format, OffsetDateTime "[year] [month]"); // missing comma
  |                                                  ^^^^^^^^^^^^^^^^

error: unexpected token: :
 --> $DIR/invalid_serializer.rs:8:50
  |
8 | declare_format_string!(my_format, OffsetDateTime : "[year] [month]"); // not a comma
  |                                                  ^

error: invalid component name `bad` at byte index 1
 --> $DIR/invalid_serializer.rs:9:51
  |
9 | declare_format_string!(my_format, OffsetDateTime, "[bad]"); // bad component name
  |                                                   ^^^^^^^

error: expected string
  --> $DIR/invalid_serializer.rs:10:51
   |
10 | declare_format_string!(my_format, OffsetDateTime, not_string); // string format wrong type
   |                                                   ^^^^^^^^^^
